refactor: attempt to remove thread.sleep
OCD-4765